--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
 		"primevue": "3.15.0",
 		"prismjs": "^1.15.0",
 		"vue": "3.2.31",
+		"vue-i18n": "^9.2.2",
 		"vue-loading-overlay": "^5.0.3",
 		"vue-router": "^4.0.14",
 		"vuex": "^4.0.2"
