--- a/backend/package.json
+++ b/backend/package.json
@@ -11,25 +11,23 @@
   "author": "",
   "license": "GPL",
   "dependencies": {
-    "@mongoosejs/double": "^0.2.0",
-    "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "exceljs": "^3.8.1",
-    "express": "^4.17.1",
-    "fs-extra": "^10.1.0",
-    "https": "^1.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "ldap-authentication": "^2.2.8",
+    "exceljs": "^4.3.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "ldap-authentication": "^3.0.3",
     "md5": "^2.3.0",
-    "moment": "^2.29.1",
-    "mongoose": "^5.8.12",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.6.3",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "resize-img": "^2.0.0",
-    "smtp-client": "^0.3.3"
+    "smtp-client": "^0.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.22"
   }
 }
