--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
 		"prismjs": "^1.29.0",
 		"sass": "^1.60.0",
 		"sass-loader": "^13.2.2",
+		"v-clipboard": "^3.0.0-next.1",
 		"vue": "^3.2.47",
 		"vue-i18n": "^9.2.2",
 		"vue-loading-overlay": "6.0.3",
