--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "ldap-authentication": "^3.0.3",
     "md5": "^2.3.0",
+    "mime": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
