--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 		"chart.js": "4.2.1",
 		"core-js": "^3.29.1",
 		"dateformat": "^5.0.3",
+		"element-plus": "^2.4.1",
 		"font-awesome": "^4.7.0",
 		"js-file-download": "^0.4.12",
 		"jsonwebtoken": "^8.5.1",
