--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,24 +4,20 @@
 	"description": "Frontend for Compact Electronic Logbook System (Clog)",
 	"author": "Lin Wang",
 	"license": "GPL",
+	"type": "module",
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint",
-		"test:unit": "vue-cli-service test:unit"
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+		"format": "prettier --write src/"
 	},
 	"devDependencies": {
-		"@babel/eslint-parser": "^7.21.3",
-		"@vue/cli-plugin-babel": "^5.0.8",
-		"@vue/cli-plugin-eslint": "^5.0.8",
-		"@vue/cli-plugin-router": "^5.0.8",
-		"@vue/cli-plugin-unit-jest": "^5.0.8",
-		"@vue/cli-service": "^5.0.8",
+		"@vitejs/plugin-vue": "^5.0.5",
 		"@vue/test-utils": "^2.3.1",
-		"babel-core": "7.0.0-bridge.0",
-		"babel-jest": "^25.0.0",
 		"eslint": "^8.36.0",
-		"eslint-plugin-vue": "^7.0.0-0"
+		"eslint-plugin-vue": "^7.0.0-0",
+		"vite": "^5.3.2"
 	},
 	"dependencies": {
 		"@fullcalendar/core": "^5.11.3",
@@ -36,17 +32,14 @@
 		"element-plus": "^2.4.1",
 		"font-awesome": "^4.7.0",
 		"js-file-download": "^0.4.12",
-		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
 		"moment": "^2.29.4",
-		"node-polyfill-webpack-plugin": "^2.0.1",
 		"primeflex": "3.3.0",
 		"primeicons": "6.0.1",
 		"primevue": "3.26.1",
 		"prismjs": "^1.29.0",
-		"sass": "^1.60.0",
-		"sass-loader": "^13.2.2",
 		"v-clipboard": "^3.0.0-next.1",
-		"vue": "^3.2.47",
+		"vue": "^3.4.31",
 		"vue-i18n": "^9.2.2",
 		"vue-loading-overlay": "6.0.3",
 		"vue-router": "^4.1.6",
