--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"vite": "^5.3.2"
 	},
 	"dependencies": {
+		"@ckeditor/ckeditor5-vue": "^6.0.0",
 		"@fullcalendar/core": "^5.11.3",
 		"@fullcalendar/daygrid": "^5.11.3",
 		"@fullcalendar/interaction": "^5.11.3",
@@ -27,6 +28,7 @@
 		"@fullcalendar/vue3": "^5.11.3",
 		"axios": "^1.3.4",
 		"chart.js": "4.2.1",
+		"ckeditor5": "^42.0.0",
 		"core-js": "^3.29.1",
 		"dateformat": "^5.0.3",
 		"element-plus": "^2.4.1",
